--- a/index.html
+++ b/index.html
@@ -1,1 +1,194 @@
-Hi
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Me</title>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: Arial, sans-serif;
+        color: #fff;
+        overflow: hidden;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      #video-background {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        z-index: -1;
+      }
+
+      #enter-button {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        padding: 15px 30px;
+        font-size: 1.2em;
+        color: #fff;
+        background: rgba(0, 0, 0, 0.2);
+        border: none;
+        border-radius: 25px;
+        cursor: pointer;
+        backdrop-filter: blur(2px);
+        z-index: 1;
+        transition: opacity 0.5s ease-in, visibility 0.5s ease-in, background 0.5s ease-in, backdrop-filter 0.5s ease-in;
+      }
+
+      #enter-button:hover {
+        backdrop-filter: blur(25px);
+        background: rgba(0, 0, 0, 0.4);
+      }
+
+      .container {
+        position: relative;
+        width: 90%;
+        background: rgba(0, 0, 0, 0.1);
+        max-width: 800px;
+        padding: 20px;
+        border-radius: 15px;
+        box-shadow: 0 8px 32px rgba(0, 0, 0, 0.5);
+        text-align: center;
+        backdrop-filter: blur(15px);
+        -webkit-backdrop-filter: blur(15px);
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.5s ease-in, visibility 0.5s ease-in, background 0.5s ease-in, backdrop-filter 0.5s ease-in;
+      }
+
+      .container:hover {
+        background: rgba(0, 0, 0, 0.15);
+        backdrop-filter: blur(20px);
+      }
+
+      .container.visible {
+        opacity: 1;
+        visibility: visible;
+      }
+
+      .container p {
+        margin: 10px 0;
+      }
+
+      .container .profile-pic {
+        margin-bottom: 50px;
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+        object-fit: cover;
+        box-shadow: 0 0 15px 5px rgba(255, 255, 255, 0.8);
+      }
+
+      .container .social-links {
+        display: flex;
+        justify-content: center;
+        margin-top: 50px;
+      }
+
+      .container .social-links a {
+        width: 50px;
+        height: 50px;
+        margin: 0 10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: rgba(255, 255, 255, 0.05);
+        border-radius: 50%;
+        color: #fff;
+        text-decoration: none;
+        font-size: 1.5em;
+        transition: all 0.3s ease;
+        overflow: hidden;
+      }
+
+      .container .social-links a img {
+        width: 50%;
+        height: 50%;
+        object-fit: contain;
+        filter: invert(1) grayscale(100%) brightness(100%) contrast(100%) drop-shadow(0 0 0.3rem rgb(255, 255, 255));
+      }
+
+      .container .social-links a:hover {
+        background: rgba(255, 255, 255, 0.15);
+        transform: scale(1.1);
+      }
+    </style>
+  </head>
+  <body>
+    <video id="video-background" autoplay muted loop>
+      <source src="https://r2.worst.fail/users/terry/video.mp4" type="video/mp4"> Your browser does not support the video tag.
+    </video>
+    <div class="overlay"></div>
+    <button id="enter-button">Enter</button>
+    <div class="container" id="about-me">
+      <img src="https://iili.io/2VZgof2.jpg" alt="Your Profile Picture" class="profile-pic">
+      <p>Hello! My name is Derek, and I am passionate about web development, graphic design, and helping others.</p>
+      <p>In my free time, I enjoy listening to music or watching YouTube videos. I am also deeply interested in uncovering exploits and fighting against internet censorship.</p>
+      <p>This site is my little corner of the web, where I share more about myself, my projects, and the things that inspire me.</p>
+      <div class="social-links">
+        <a href="https://discord.gg/invite/Eg2EWXwYcn" target="_blank">
+          <img src="https://cdn.prod.website-files.com/6257adef93867e50d84d30e2/636e0a6ac3c481f273141736_icon_clyde_black_RGB.png" alt="Discord">
+        </a>
+        <a href="https://www.youtube.com/@patheticcs" target="_blank">
+          <img src="https://www.iconpacks.net/icons/1/free-youtube-icon-123-thumb.png" alt="Youtube">
+        </a>
+        <a href="https://www.roblox.com/users/2625446554/profile" target="_blank">
+          <img src="https://devforum-uploads.s3.dualstack.us-east-2.amazonaws.com/uploads/original/4X/0/e/e/0eeeb19633422b1241f4306419a0f15f39d58de9.png" alt="Roblox">
+        </a>
+        <a href="https://github.com/Patheticcs/" target="_blank">
+          <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub">
+        </a>
+      </div>
+    </div>
+    <script>
+      const enterButton = document.getElementById('enter-button');
+      const aboutMe = document.getElementById('about-me');
+      const video = document.getElementById('video-background');
+      const container = document.querySelector('.container');
+      enterButton.addEventListener('click', () => {
+        video.muted = false;
+        enterButton.style.display = 'none';
+        aboutMe.classList.add('visible');
+        container.classList.add('visible');
+      });
+      document.querySelector('.container').addEventListener('mousemove', function(e) {
+        const container = e.currentTarget;
+        const {
+          offsetWidth: width,
+          offsetHeight: height
+        } = container;
+        const {
+          offsetX,
+          offsetY
+        } = e;
+        const x = (offsetX / width) * 2 - 1;
+        const y = (offsetY / height) * 2 - 1;
+        container.style.transform = `perspective(1000px) rotateX(${y * 5}deg) rotateY(${x * 5}deg)`;
+        container.style.transition = "transform 0.1s ease-out";
+      });
+      document.querySelector('.container').addEventListener('mouseleave', function(e) {
+        const container = e.currentTarget;
+        container.style.transition = "transform 0.5s ease-out";
+        container.style.transform = 'perspective(1000px) rotateX(0deg) rotateY(0deg)';
+      });
+      document.addEventListener("keydown", function(event) {
+        if (event.ctrlKey) {
+          event.preventDefault();
+        }
+        if (event.keyCode == 123) {
+          event.preventDefault();
+        }
+      });
+      document.addEventListener('contextmenu', event => event.preventDefault());
+    </script>
+  </body>
+</html>
