--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   </head>
   <body>
     <video id="video-background" autoplay muted loop>
-      <source src="https://r2.worst.fail/users/terry/video.mp4" type="video/mp4"> Your browser does not support the video tag.
+      <source src="https://r2.guns.lol/ae662079-4c93-4f1d-a796-c7d4cf21fe0d.mp4" type="video/mp4"> Your browser does not support the video tag.
     </video>
     <div class="overlay"></div>
     <button id="enter-button">Enter</button>
