--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="icon" type="image/x-icon" href="https://iili.io/2VZgof2.jpg">
+    <link rel="icon" type="image/x-icon" href="/pfp">
     <title>About Me</title>
     <style>
       body {
@@ -129,7 +129,7 @@
     <div class="overlay"></div>
     <button id="enter-button">Enter</button>
     <div class="container" id="about-me">
-      <img src="/favicon" alt="Your Profile Picture" class="profile-pic">
+      <img src="/pfp" alt="Your Profile Picture" class="profile-pic">
       <p>Hello! My name is Derek, and I am passionate about web development, graphic design, and helping others.</p>
       <p>In my free time, I enjoy listening to music or watching YouTube videos. I am also deeply interested in uncovering exploits and fighting against internet censorship.</p>
       <p>This site is my little corner of the web, where I share more about myself, my projects, and the things that inspire me.</p>
