--- a/index.html
+++ b/index.html
@@ -146,6 +146,9 @@
         <a href="https://github.com/Patheticcs/" target="_blank">
           <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub">
         </a>
+        <a href="https://www.pathetic.one" target="_blank">
+          <img src="/IconRMVBG.png" alt="GitHub">
+        </a>
       </div>
     </div>
     <script>
