--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
         align-items: center;
       }
 
+      body::before {
+        content: '';
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: url('https://r2.guns.lol/ae662079-4c93-4f1d-a796-c7d4cf21fe0d.mp4') center center / cover no-repeat;
+        z-index: -1;
+      }
+
       #video-background {
         position: fixed;
         top: 0;
@@ -24,6 +35,7 @@
         height: 100%;
         object-fit: cover;
         z-index: -1;
+        pointer-events: none;
       }
 
       #enter-button {
