--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
   <head>
     <link rel="icon" type="image/x-icon" href="/pfp.png">
+<meta property="og:image" content="/favicon">
+<meta property="og:type" content="website">
+<meta property="og:locale" content="en_US">
     <title>About Me</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
       body {
         margin: 0;
@@ -140,22 +142,6 @@
       .container .social-links a:hover {
         background: rgba(255, 255, 255, 0.15);
         transform: scale(1.1);
-      }
-
-      @media (max-width: 768px) {
-        .container {
-          margin: 10px;
-          padding: 15px;
-        }
-
-        .container .social-links {
-          gap: 10px;
-        }
-
-        .container .social-links a {
-          width: 40px;
-          height: 40px;
-        }
       }
     </style>
   </head>
