--- a/index.html
+++ b/index.html
@@ -20,6 +20,28 @@
         overflow-x: hidden;
       }
 
+      .video-background {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        overflow: hidden;
+      }
+
+      #myVideo {
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        min-width: 100%;
+        min-height: 100%;
+        width: auto;
+        height: auto;
+        z-index: -1;
+        object-fit: cover;
+      }
+
       .audio-wrapper {
         position: fixed;
         top: 0;
@@ -133,9 +155,15 @@
     </style>
   </head>
   <body>
+    <div class="video-background">
+      <video autoplay muted loop id="myVideo">
+        <source src="/background.mp4" type="video/mp4">
+      </video>
+    </div>
     <div class="audio-wrapper">
-      <audio id="audio-background" autoplay loop>
-        <source src="/audio.mp3" type="audio/mp3"> Your browser does not support the audio tag.
+      <audio id="audio-background" loop>
+        <source src="/audio.mp3" type="audio/mp3">
+        Your browser does not support the audio tag.
       </audio>
     </div>
     <button id="enter-button">Enter</button>
@@ -167,12 +195,25 @@
       const aboutMe = document.getElementById('about-me');
       const audio = document.getElementById('audio-background');
       const container = document.querySelector('.container');
+      const video = document.getElementById('myVideo');
+
       enterButton.addEventListener('click', () => {
-        audio.play();
+        // Play audio
+        audio.play().catch(function(error) {
+          console.log("Audio play failed:", error);
+        });
+        
+        // Show main content
         enterButton.style.display = 'none';
         aboutMe.classList.add('visible');
         container.classList.add('visible');
+        
+        // Ensure video is playing
+        video.play().catch(function(error) {
+          console.log("Video play failed:", error);
+        });
       });
+
       if (!window.matchMedia('(max-width: 768px)').matches) {
         document.querySelector('.container').addEventListener('mousemove', function(e) {
           const container = e.currentTarget;
@@ -189,12 +230,14 @@
           container.style.transform = `perspective(1000px) rotateX(${y * 5}deg) rotateY(${x * 5}deg)`;
           container.style.transition = "transform 0.1s ease-out";
         });
+
         document.querySelector('.container').addEventListener('mouseleave', function(e) {
           const container = e.currentTarget;
           container.style.transition = "transform 0.5s ease-out";
           container.style.transform = 'perspective(1000px) rotateX(0deg) rotateY(0deg)';
         });
       }
+
       document.addEventListener("keydown", function(event) {
         if (event.ctrlKey) {
           event.preventDefault();
@@ -203,6 +246,7 @@
           event.preventDefault();
         }
       });
+
       document.addEventListener('contextmenu', event => event.preventDefault());
     </script>
   </body>
