--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <link rel="icon" type="image/x-icon" href="/pfp.png">
     <meta property="og:image" content="/pfp.png">
-    <!-- Corrected the og:image link -->
     <meta property="og:type" content="website">
     <meta property="og:locale" content="en_US">
     <title>About Me</title>
@@ -23,8 +22,9 @@
 
       .video-background {
         position: fixed;
-        top: 0;
-        left: 0;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         width: 100%;
         height: 100%;
         z-index: -1;
@@ -33,8 +33,9 @@
 
       #myVideo {
         position: absolute;
-        right: 0;
-        bottom: 0;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         min-width: 100%;
         min-height: 100%;
         width: auto;
