--- a/index.html
+++ b/index.html
@@ -177,14 +177,11 @@
         <a href="https://discord.gg/invite/Eg2EWXwYcn" target="_blank">
           <img src="https://cdn.prod.website-files.com/6257adef93867e50d84d30e2/636e0a6ac3c481f273141736_icon_clyde_black_RGB.png" alt="Discord">
         </a>
-        <a href="https://www.youtube.com/@patheticcs" target="_blank">
+        <a href="https://www.youtube.com/@patheticpatheticpathetic" target="_blank">
           <img src="https://www.iconpacks.net/icons/1/free-youtube-icon-123-thumb.png" alt="Youtube">
         </a>
         <a href="https://www.roblox.com/users/2625446554/profile" target="_blank">
           <img src="https://devforum-uploads.s3.dualstack.us-east-2.amazonaws.com/uploads/original/4X/0/e/e/0eeeb19633422b1241f4306419a0f15f39d58de9.png" alt="Roblox">
-        </a>
-        <a href="https://github.com/Patheticcs/" target="_blank">
-          <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub">
         </a>
         <a href="https://www.pathetic.one" target="_blank">
           <img src="/IconRMVBG.png" alt="Website">
