--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     </div>
     <div class="audio-wrapper">
       <audio id="audio-background" loop>
-        <source src="/whatever" type="audio/mp3"> Your browser does not support the audio tag.
+        <source src="/whatever.mp3" type="audio/mp3"> Your browser does not support the audio tag.
       </audio>
     </div>
     <button id="enter-button">Enter</button>
