--- a/index.html
+++ b/index.html
@@ -186,6 +186,9 @@
         <a href="https://www.pathetic.one" target="_blank">
           <img src="/IconRMVBG.png" alt="Website">
         </a>
+        <a href="https://synprev.vercel.app/" target="_blank">
+          <img src="/favicon.gif" alt="Website">
+        </a>
       </div>
     </div>
     <script>
