--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <p>In my free time, I enjoy listening to music or watching YouTube videos. I am also deeply interested in uncovering exploits and fighting against internet censorship.</p>
       <p>This site is my little corner of the web, where I share more about myself, my projects, and the things that inspire me.</p>
       <div class="social-links">
-        <a href="https://discord.gg/invite/usepathetic" target="_blank">
+        <a href="https://discord.gg/invite/QytwTYpTEx" target="_blank">
           <img src="https://cdn.prod.website-files.com/6257adef93867e50d84d30e2/636e0a6ac3c481f273141736_icon_clyde_black_RGB.png" alt="Discord">
         </a>
         <a href="https://www.youtube.com/@patheticpatheticpathetic" target="_blank">
