--- a/index.html
+++ b/index.html
@@ -159,12 +159,12 @@
   <body>
     <div class="video-background">
       <video autoplay muted loop id="myVideo" playsinline>
-        <source src="/background.mp4" type="video/mp4">
+        <source src="youtube_aE-9hFktH40_1920x1080_h264 (1).mp4" type="video/mp4">
       </video>
     </div>
     <div class="audio-wrapper">
       <audio id="audio-background" loop>
-        <source src="/whatever.mp3" type="audio/mp3"> Your browser does not support the audio tag.
+        <source src="youtube_aE-9hFktH40_1920x1080_h264 (1).mp4" type="audio/mp3"> Your browser does not support the audio tag.
       </audio>
     </div>
     <button id="enter-button">Enter</button>
