--- a/index.html
+++ b/index.html
@@ -187,7 +187,10 @@
           <img src="/IconRMVBG.png" alt="Website">
         </a>
         <a href="https://synprev.vercel.app/" target="_blank">
-          <img src="/favicon.gif" alt="Website">
+          <img src="https://synprev.vercel.app/favicon.png" alt="Website">
+        </a>
+        <a href="https://flixxer.pages.dev" target="_blank">
+          <img src="https://flixxer.pages.dev/static.png" alt="Website">
         </a>
       </div>
     </div>
